# bibparser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  bibparser  cmake_install.cmake  compile_flags.txt  lex.yy.c  mkdocs.yml  test
data/: biblatex-software.bib  bug1283.bib  complex.bib  customtypes.bib  entangled.bib  example1.bib  incomplete_entries.bib
docs/: index.md
include/: global_variables.hpp  parser.hpp  read_bib.h  read_bib.hpp  string_utils.hpp  syntax_check.hpp  tokenizer.hpp
lex_tests/: test.lex
src/: global_variables.cpp  main.cpp  parser.cpp  read_bib.cpp  string_utils.cpp  symbol_table.cpp  syntax_checker.cpp  test.cpp  tokenizer.cpp
tests/: iterators.cpp  tests.cpp
